# graphics-test

./: .gitignore  .gitmodules  CMakeLists.txt  README.org
cmake/: Findcairomm.cmake
cmake/toolchains/: x86_64-w64-mingw32.cmake
src/: CMakeLists.txt  app.hpp  canvas.hpp  imgui.hpp  main.cc  type.hpp
src/core/: config.hpp  core.hpp  event.hpp  event_type.hpp  observable.hpp  type.hpp
src/core/utility/: utility.hpp
src/graphics/: camera.hpp  type.hpp
src/graphics/gl/: buffer.hpp  gl.hpp  object.hpp  program.hpp  shader.hpp  texture.hpp  type.hpp  vertex_array.hpp
src/platform/: platform.hpp
src/platform/glfw/: glfw.hpp
src/platform/sdl2/: sdl2.hpp
src/window/: event_type.hpp  window.hpp
test/: CMakeLists.txt  test.cc
